--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx src/"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "expo": "~38.0.8",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -17,8 +20,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "prettier": "^2.0.5",
     "typescript": "~3.9.5"
   },
   "private": true
